Fixed the wrong font sizes and margin on H4

--- a/assets/default.css
+++ b/assets/default.css
@@ -134,9 +134,9 @@ h3 {
 h4 {
 	font-weight:normal;
 	color:#ffffff;
-	font-size:10px;
+	font-size:28px;
 	margin-top:10px;
-	margin-bottom:28px;
+	margin-bottom:10px;
 	text-align:center;
 	}
 #video_area {
